# towards-an-evaluation-framework-for-generated-formal-knowledge

./: README.md  pyproject.toml
1-prolog-generation/: dataset_diagnosis_classified.csv  main.py
1-prolog-generation/prompts/: prompt.j2
2-metrics-discovery/: README.md  main.py  results_20260312_151052_arity.csv  results_prolog-computed.csv
2-metrics-discovery/_analysis/: ann_df_arity.xlsx  classify_fixes.ipynb  fixes-arity.xlsx  fixes_partially_annotated_arity_12_03.xlsx  fixes_tagged_arity.csv  tags_cache.json  unique_generated_labels_arity.xlsx
2-metrics-discovery/_analysis/prompts/: system.j2  user.j2
2-metrics-discovery/prompts/: system.j2  user.j2
3-metrics-evaluation/: ann_df.xlsx  results_prolog-computed.csv  syntactic_structural_metrics.ipynb  task_based_metrics.ipynb
3-metrics-evaluation/compliance_wrt_vocabulary/: metrics.py  type_compliance_analyzer.py  vocabulary.json
3-metrics-evaluation/compliance_wrt_vocabulary/find_threshold/: threshold_calibration.py
3-metrics-evaluation/consistency_answer_section/: consistency_analyzer.py  metrics.py
3-metrics-evaluation/kb_derivation_performance/: README.md  config.py  main.py  utils.py
3-metrics-evaluation/kb_derivation_performance/_analysis/: assess_kb_response_prompt.py
3-metrics-evaluation/syntactic_correctness/: metrics.py  syntactic_correctness_analyzer.py  utils.py
3-metrics-evaluation/unbound_variables/: metrics.py  unbound_variables_analyzer.py
3-metrics-evaluation/unused_terms/: meta_interpreter.pl  metrics.py  unused_terms_analyzer.py
(+12 files in other folders)
